#356 Fix jumbotron on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,3 +59,12 @@
 .border-bottom-primary {
   border-bottom: 1px solid lighten($color-primary, 50%);
 }
+
+.jumbotron-title {
+  font-weight: 600;
+  font-size: 2.1rem;
+
+  @include sm-and-down {
+    font-size: 1.25rem;
+  }
+}
